--- a/Assignment/Assignment_1.ipynb
+++ b/Assignment/Assignment_1.ipynb
@@ -36,19 +36,7 @@
     {
       "cell_type": "code",
       "source": [
-        "s=\"Hi there Sam!\"\n",
-        "print(s.split())"
-      ],
-      "metadata": {
-        "id": "s07c7JK7Oqt-"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "s=\"Hi there Sam!\"\n",
+        "s=\"How are you!\"\n",
         "print(s.split())"
       ],
       "metadata": {
@@ -56,15 +44,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8421bc60-ecf0-434e-a76e-3dbb6ad87773"
+        "outputId": "342aed50-d409-4452-c837-b7191cbaace8"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['Hi', 'there', 'Sam!']\n"
+            "['How', 'are', 'you!']\n"
           ]
         }
       ]
@@ -138,15 +126,6 @@
       "metadata": {
         "id": "KE74ZEwkRExZ"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "1BuDk4dDGlXz"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -296,9 +275,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c13dba35-f3ff-4403-c767-4596779b11bd"
+        "outputId": "214652b0-ac44-46ba-d77d-bcdf6e30e439"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -308,7 +287,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 6
         }
       ]
     },
@@ -333,9 +312,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "394f4a90-785c-4b22-9dbb-5813d01cb67f"
+        "outputId": "f6c13c82-ceb1-4e1a-8547-dfdd3a2cb4ed"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -347,7 +326,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 10
         }
       ]
     },
@@ -373,9 +352,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c838987f-8690-40b4-c826-0886aa6d2c76"
+        "outputId": "b6d5d74f-e32d-400f-ff28-733ff41bbf96"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,7 +387,7 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
-        "data = [10,20,30]\n",
+        "data = [80,90,70]\n",
         "df = pd.DataFrame(data, columns=['Marks'])\n",
         "df\n"
       ],
@@ -418,22 +397,22 @@
           "base_uri": "https://localhost:8080/",
           "height": 143
         },
-        "outputId": "ecd09ec0-bafd-4e3e-c226-5f3deb2ea752"
+        "outputId": "db88d73a-915c-4dd9-ca7f-a38cb9556ddb"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "   Marks\n",
-              "0     10\n",
-              "1     20\n",
-              "2     30"
+              "0     80\n",
+              "1     90\n",
+              "2     70"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3dd7d6ae-7d3d-43d1-b835-037af675e01a\">\n",
+              "  <div id=\"df-b69e65db-a74c-4f4d-8b30-38c21a82ba31\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -459,20 +438,20 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>10</td>\n",
+              "      <td>80</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>20</td>\n",
+              "      <td>90</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>30</td>\n",
+              "      <td>70</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3dd7d6ae-7d3d-43d1-b835-037af675e01a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b69e65db-a74c-4f4d-8b30-38c21a82ba31')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -523,12 +502,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-3dd7d6ae-7d3d-43d1-b835-037af675e01a button.colab-df-convert');\n",
+              "          document.querySelector('#df-b69e65db-a74c-4f4d-8b30-38c21a82ba31 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-3dd7d6ae-7d3d-43d1-b835-037af675e01a');\n",
+              "          const element = document.querySelector('#df-b69e65db-a74c-4f4d-8b30-38c21a82ba31');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -551,158 +530,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import pandas as pd\n",
-        "data = [10,20,30]\n",
-        "df = pd.DataFrame(data, columns=['Marks'])\n",
-        "df\n"
-      ],
-      "metadata": {
-        "id": "xNpI_XXoYhs0",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 143
-        },
-        "outputId": "a737fc23-022c-4e6f-94cb-91be93f8957d"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "   Marks\n",
-              "0     10\n",
-              "1     20\n",
-              "2     30"
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-b546e903-ef7e-48c0-803a-a904e176d435\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Marks</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>10</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>20</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>30</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b546e903-ef7e-48c0-803a-a904e176d435')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-b546e903-ef7e-48c0-803a-a904e176d435 button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b546e903-ef7e-48c0-803a-a904e176d435');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
-            ]
-          },
-          "metadata": {},
-          "execution_count": 23
+          "execution_count": 4
         }
       ]
     },
