--- a/Assignment/Assignment_1.ipynb
+++ b/Assignment/Assignment_1.ipynb
@@ -36,7 +36,7 @@
     {
       "cell_type": "code",
       "source": [
-        "s=\"How are you!\"\n",
+        "s=\"Hi there sasi!\"\n",
         "print(s.split())"
       ],
       "metadata": {
@@ -44,15 +44,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "342aed50-d409-4452-c837-b7191cbaace8"
+        "outputId": "25036eba-7b65-4ee4-fd40-7134bb14b2b0"
       },
-      "execution_count": 1,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['How', 'are', 'you!']\n"
+            "['Hi', 'there', 'sasi!']\n"
           ]
         }
       ]
